# mail-guardian

./: .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml
.issues/: .agent.md  .config.yml  0001-project-scaffold-git-issues-setup.md  0002-imap-core-module.md  0003-llm-integration-litellm.md  0004-google-calendar-integration.md  0005-autonomous-dispatcher-mg-agent.md  0006-default-to-ollama-via-openai-compatible.md  0007-google-calendar-setup-guide-onboarding.md  0008-gmail-app-passwort-dokumentation-auth-wi.md  0009-timezone-konfigurierbar-machen.md  0010-caldavical-support-als-alternative-zu-go.md
mailguardian/: __init__.py  accounts.py  agent.py  auth.py  calendar_.py  cli.py  config.py  gcal.py  imap_client.py  inbox.py  llm.py  playbooks.py
